fixed background of .btn; featured textarea in main_chat; fixed struct of html: main_chat=(messages;textarea;); featured scrollbar to nav_menu;

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -73,7 +73,7 @@ height: 5%;
     background-color: #19171d;
 }
 
-/* Buttons and Icons
+/*Icons
 ========================== */
 
 .icon::after, .icon::before{
@@ -98,7 +98,8 @@ height: 5%;
     content: "\f08d";
     font-size: 1.2em;
 }
-
+/* Buttons
+========================== */
 .btn{
     display: flex;
     justify-content: center;
@@ -122,7 +123,7 @@ height: 5%;
 .main__chat .btn:hover, .details .btn:hover, .main__header .btn:hover{
     color: #d1d2d3;
     border-radius: 10px;
-    box-shadow: inset 0 0 0 5px #222529;
+    box-shadow: inset 0 0 0 2px #1a1d21;
 }
 .btn.close:hover{
     background-color: red;
@@ -154,7 +155,7 @@ height: 5%;
 /* Input
 ========================== */
 
-input{
+input[type=search]{
     flex: 6 1;
     min-width: 20px;
     margin-left: 20px;
@@ -173,15 +174,76 @@ input[type=search]:hover::placeholder{
 input[type=search]:focus{
     outline: none;
 }
-
+/* Textarea */
+.text__input__container{
+    position: relative;
+    display: flex;
+    flex: 1 0 20%;
+    min-height: 150px;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.text__input{
+    display: flex;
+    flex: 1 1 100%;
+    margin: 2em;
+    padding: 1em;
+    height: 50%;
+    color: #d1d2d3;
+    border: none;
+    border-radius: 10px;
+    background-color: #222529;
+    resize: none;
+}
+.input__options{
+    overflow: auto;
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+    position: absolute;
+    left: 2em;
+    bottom: 1em;
+    display: flex;
+    flex: 1 1 100%;
+    margin: 1em;
+    border-top: 1px solid #35373b;
+}
+.left__options, .right__options{
+    display: flex;
+}
+.left__options, .right__options a{
+    margin: 0em;
+    min-width: 0px;
+    flex: 1 1;
+}
+.left__options a:first-child{
+    border-right: 1px solid #35373b;
+}
+.text__input:focus{
+    outline: none;
+    border: 1px solid #848688;
+}
+.text__input:focus::placeholder{
+    color: #d1d2d3;
+}
+/* Main
+========================== */
+.main{
+    display: flex;
+    flex-direction: column;
+    flex: 10 1 95%;
+    height: 94vh;
+}
 /* __chat_menu
 ========================== */
 .chat__choiser{
+    background-color: #19171d;
+    overflow-y: auto;
     align-items: center;
     display: flex;
     flex-direction: column;
     border-right: 1px solid #2b2a30;
-    flex: 1 1 5%;
+    flex: 1 0 5%;
 }
 .chat__picture{
     display: flex;
@@ -199,15 +261,9 @@ input[type=search]:focus{
 .chat__picture img:focus{
     box-shadow: 0 0 0px 4px #d1d2d3;
 }
-/* Main
-========================== */
 
-.main{
-    display: flex;
-    flex-direction: column;
-    flex: 10 1 95%;
-    height: 94vh;
-}
+
+
 /* main__header
 ========================== */
 
@@ -309,13 +365,15 @@ input[type=search]:focus{
     flex: 10 2 90%;
     height: 85%;
 }
-
 /* __nav__menu
 ========================== */
 .nav__menu{
     flex: 1 2 20%;
+    height: 100%;
+    background-color: #19171d;
     border-right: 1px solid #2b2a30;
     flex-direction: column;
+    overflow-y: auto;
 }
 .nav__menu a{
     display: flex;
@@ -351,22 +409,28 @@ input[type=search]:focus{
 .nav__channels, .nav__direct{
    padding: 10px 0px;
 }
-
 /* main__chat
 ========================== */
-
 .main__chat{
-    overflow-y: auto;
+    display: flex;
+    position: relative;
     background-color: #1a1d21;
-    flex: 2 0 55%;
+    flex: 2 1 55%;
     border-right: 1px solid #2b2a30;
     flex-direction: column;
 }
-.main__chat:hover::-webkit-scrollbar-thumb{
+.chat__messages{
+    display: flex;
+    overflow-y: auto;
+    flex: 2 2 80%;
+    max-height: 80%;
+    flex-direction: column;
+}
+.chat__messages:hover::-webkit-scrollbar-thumb{
     visibility: visible;
 }
-
-
+/* messages
+========================== */
 .message__container{
     display: flex;
     flex-direction: row;
@@ -380,7 +444,6 @@ input[type=search]:focus{
 .message__container:hover .hidden__reactions{
     visibility: visible;
 }
-
 /* message__avatar
 ========================== */
 .avatar__container{
@@ -426,10 +489,8 @@ input[type=search]:focus{
     color: #ababad;
     font-weight: 600;
 }
-
 /* message__option
 ========================== */
-
 .message{
     clear: both;
     color: #d1d2d3;
@@ -451,7 +512,6 @@ input[type=search]:focus{
     border: 1px solid #394246;
     border-radius: 5px;
 }
-
 .message__option{
     display: flex;
     align-items: center;
@@ -461,22 +521,18 @@ input[type=search]:focus{
     border-radius: 5px;
     background-color: #1a1d21;
 }
-
 .message__option:hover .visible__last__reply{
     opacity: 0;
     visibility: hidden;
     transition: .55s opacity, .55s visibility;
 }
-
 .message__option:hover .hidden__view__reply{
     opacity: 1;
     visibility: visible;
 }
-
 .option{
     display: flex;
 }
-
 .replies{
     display: flex;
     color: #1d9bd1;
@@ -487,13 +543,11 @@ input[type=search]:focus{
 .replies:hover{
     text-decoration: underline;
 }
-
 .reply__info{
     position: relative;
     white-space: nowrap;
     overflow: hidden;
 }
-
 .visible__last__reply, .hidden__view__reply{
     transition: .55s opacity, .55s visibility;
     margin-left: 5px;
@@ -509,7 +563,6 @@ input[type=search]:focus{
 }
 /* hidden__reactions
 ========================== */
-
 .hidden__reactions{
     position: absolute;
     top: -30px;
@@ -531,7 +584,6 @@ input[type=search]:focus{
     color: #abacad;
     display: flex;
 }
-
 /* details
 ========================== */
 .details{
